--- a/css/entercept.css
+++ b/css/entercept.css
@@ -1,3 +1,9 @@
+body,html
+{
+width:100%;
+height:100%;
+}
+
 #logo {
   display: inline-block;
 
@@ -6,9 +12,9 @@
 div.top {
   background-color: #000;
   display: block;
-  height: 90%;
+  height: 87%;
   width: 100%;
-  padding-top: 12%;
+  padding-top: 15%;
 }
 
 h1 {
@@ -24,16 +30,15 @@ h3 {
 h5 {
   color: #000;
   font-size: 12px;
-  text-align: right;
 }
 
 #text-row {
-  padding-top: 5%;
+  padding-top: 10%;
 }
 
 #contact-button {
   margin-top: 45px;
-  margin-bottom: 15%;
+  margin-bottom: 13%;
   padding-top: 12px;
   height: 45px;
   background-image: linear-gradient(-90deg, #2C23AE 0%, #436DDD 59%, #53A0FE 100%, #C900FF 100%);
@@ -46,11 +51,17 @@ h5 {
 }
 
 #footer-text {
-  padding-top: 3%;
+  margin-top: 3%;
+  max-height: 10%;
+  text-align: right;
 }
 
+@media print, screen and (max-width: 600px) {
+  #footer-text{
+    text-align: center;} }
+
 div.middle {
-  height: 15px;
+  height: 3%;
   width: 100%;
   background-image: linear-gradient(-90deg, #2C23AE 0%, #436DDD 59%, #53A0FE 100%, #C900FF 100%);
 }
