--- a/css/entercept.css
+++ b/css/entercept.css
@@ -1,9 +1,3 @@
-body,html
-{
-width:100%;
-height:100%;
-}
-
 #logo {
   display: inline-block;
 
@@ -12,9 +6,9 @@ height:100%;
 div.top {
   background-color: #000;
   display: block;
-  height: 87%;
+  height: 90%;
   width: 100%;
-  padding-top: 10%;
+  padding-top: 12%;
 }
 
 h1 {
@@ -30,15 +24,16 @@ h3 {
 h5 {
   color: #000;
   font-size: 12px;
+  text-align: right;
 }
 
 #text-row {
-  padding-top: 10%;
+  padding-top: 5%;
 }
 
 #contact-button {
   margin-top: 45px;
-  margin-bottom: 13%;
+  margin-bottom: 15%;
   padding-top: 12px;
   height: 45px;
   background-image: linear-gradient(-90deg, #2C23AE 0%, #436DDD 59%, #53A0FE 100%, #C900FF 100%);
@@ -51,17 +46,11 @@ h5 {
 }
 
 #footer-text {
-  margin-top: 3%;
-  max-height: 10%;
-  text-align: right;
+  padding-top: 3%;
 }
 
-@media print, screen and (max-width: 600px) {
-  #footer-text{
-    text-align: center;} }
-
 div.middle {
-  height: 3%;
+  height: 15px;
   width: 100%;
   background-image: linear-gradient(-90deg, #2C23AE 0%, #436DDD 59%, #53A0FE 100%, #C900FF 100%);
 }
