--- a/css/entercept.css
+++ b/css/entercept.css
@@ -54,7 +54,11 @@ h5 {
     text-align: center;}
   h1 {
     font-size: 32px;
-    } }
+    }
+    #text-row {
+      padding-top: 8%;
+    }
+  }
 
 
 div.middle {
