--- a/css/entercept.css
+++ b/css/entercept.css
@@ -10,9 +10,6 @@
 
 
 
-body {
-}
-
 #logo {
   display: block;
 	width: 80%;
@@ -20,7 +17,7 @@ body {
 }
 
 svg {
-	fill: #000;
+	fill: #050505;
 	-webkit-transition: ease 0.2s;
 	 transition: ease 0.2s;
 }
@@ -34,7 +31,7 @@ div.top {
 h1 {
   color: #000215;
   font-size: 34px;
-  font-family: DINPro-Bold;
+  font-family: DINPro-Regular;
 }
 
 h3 {
@@ -50,13 +47,13 @@ h5 {
 }
 
 #text-row {
-  padding-top: 5%;
+  padding-top: 3%;
 }
 
 #contact-button {
   margin-top: 45px;
   margin-bottom: 10%;
-  padding-top: 12px;
+	margin-left: 1%;
   height: 45px;
   background: #0020ff;
   width: 170px;
@@ -70,9 +67,34 @@ h5 {
 }
 
 #contact-button:hover {
-	background: #000;
+	background: #daddd8;
+	color: #050505;
 	-webkit-transition: ease 0.2s;
 	 transition: ease 0.2s;
+}
+
+#learn-button {
+  margin-top: 45px;
+  margin-bottom: 10%;
+  height: 45px;
+  background: #fff;
+	box-shadow: inset 0 0 0 3px #0020ff;
+  width: 170px;
+  color: #0020ff;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 14px;
+  font-family: DINPro-Bold;
+	-webkit-transition: ease 0.2s;
+	 transition: ease 0.2s;
+}
+
+#learn-button:hover {
+	background: #1c1c1c;
+	box-shadow: inset 0 0 0 3px #1c1c1c;
+	-webkit-transition:  0.2s;
+	 transition: ease 0.2s;
+	 color: #fff;
 }
 
 #footer-text {
