--- a/css/entercept.css
+++ b/css/entercept.css
@@ -13,11 +13,13 @@
 #logo {
   display: block;
 	width: 80%;
+	padding-left: 5px;
+	padding-bottom: 10%;
 
 }
 
 svg {
-	fill: #050505;
+	fill: #ffffff;
 	-webkit-transition: ease 0.2s;
 	 transition: ease 0.2s;
 }
@@ -25,36 +27,46 @@ svg {
 div.top {
   display: block;
   width: 100%;
-  padding-top: 12%;
+  padding-top: 30%;
+
+
 }
 
 h1 {
-  color: #000215;
+  color: #13171a;
   font-size: 34px;
   font-family: DINPro-Regular;
 }
 
 h3 {
-  color: #000215;
+  color: #697077;
   font-size: 18px;
   font-family: DINPro-Regular;
 }
 
-h5 {
-  color: #000215;
-  font-size: 12px;
+h5 a {
+  color: #13171a;
+  font-size: 15px;
   font-family: DINPro-Regular;
+}
+
+h5 a:hover{
+  color: #0062ff;
 }
 
 #text-row {
   padding-top: 3%;
 }
 
+#contact-text {
+  padding-top: 2%;
+}
+
 #contact-button {
   margin-top: 45px;
   margin-bottom: 10%;
   height: 45px;
-  background: #0020ff;
+  background: #0062ff;
   width: 170px;
   color: #fff;
   text-transform: uppercase;
@@ -66,7 +78,7 @@ h5 {
 }
 
 #contact-button:hover {
-	background: #daddd8;
+	background: #0062ff;
 	color: #050505;
 	-webkit-transition: ease 0.2s;
 	 transition: ease 0.2s;
@@ -79,7 +91,7 @@ h5 {
   background: #fff;
 	box-shadow: inset 0 0 0 3px #0020ff;
   width: 170px;
-  color: #0020ff;
+  color: #0062ff;
   text-transform: uppercase;
   text-align: center;
   font-size: 14px;
@@ -89,7 +101,7 @@ h5 {
 }
 
 #learn-button:hover {
-	background: #1c1c1c;
+	background: #0530ad;
 	box-shadow: inset 0 0 0 3px #1c1c1c;
 	-webkit-transition:  0.2s;
 	 transition: ease 0.2s;
@@ -101,7 +113,23 @@ h5 {
   text-align: left;;
 }
 
+
+@media print, screen and (max-width: 1023px) {
+	#logo {
+		width: 40%;
+
+	}
+
+	}
+
+
 @media print, screen and (max-width: 600px) {
+
+	#logo {
+		width: 70%;
+
+	}
+
   #footer-text {
     text-align: left;}
   h1 {
@@ -110,12 +138,31 @@ h5 {
     #text-row {
       padding-top: 8%;
     }
+		#contact-text {
+		  padding-top: 10%;
+		}
+
+		.main {
+			margin-left: 5%;
+			margin-right: 5%;
+		}
+		.top {
+			padding-left: 5%;
+			padding-right: 5%;
+		}
+		div.top {
+		  display: block;
+		  width: 100%;
+		  padding-top: 15%;
+
+
+		}
   }
 
 
 	div.middle {
-	  height: 10px;
+		height: auto;
 	  width: 100%;
-		background-color: #0020ff;
-	  xbackground-image: linear-gradient( 45deg, #000FFF 0%, #5000ff 30%, #000 82%, #000 100%);
+		background-color: #0062ff;
+	  xbackground-image: linear-gradient( 30deg, #0062ff 0%, #000 100%);
 	}
