--- a/css/entercept.css
+++ b/css/entercept.css
@@ -159,7 +159,12 @@ h5 a:hover{
 		  width: 100%;
 		  padding-top: 33%;
 
-
+		}
+		h3 {
+		  color: #697077;
+		  font-size: 16px;
+			line-height: 24px;
+		  font-family: DINPro-Regular;
 		}
   }
 
